# Godot-Gravity-Simulator

./: README.md
godot/: icon.svg.import  main.tscn  mass.gd  mass.tscn  project.godot  rust.gdextension  some_large_many_small_masses.tscn  two_masses.tscn
godot/art/: red_circle.png.import
rust/: Cargo.toml
rust/src/: barnes_hut.rs  base.rs  direct.rs  fmm.rs  godot_aliases.rs  lib.rs  space.rs
rust/src/barnes_hut/: quadtree.rs
rust/src/base/: vec2.rs
rust/src/fmm/: quadtree.rs  vec2.rs
