[package]
name = "godot-gravity-simulator-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compiles this crate to a dynamic C library

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[features]
direct = []
barnes_hut = []
barnes_hut_parallel_force_calc = ["barnes_hut"]
fmm = []
